# WitchMaths

./: README.md
1_lab/: CMakeLists.txt
1_lab/first_task/: CMakeLists.txt  README.md
1_lab/first_task/bins/: first_task.out
1_lab/first_task/libs/: maclaurin.hh
1_lab/first_task/srcs/: maclaurin.cc  main.cc
1_lab/libs/: lab_1.hh
1_lab/second_task/: CMakeLists.txt  README.md
1_lab/second_task/srcs/: main.cc  seidel.cc
1_lab/srcs/: first_task.cc  lab_1.cc
1_lab/third_task/: README.md  main.py
1_lab/third_task/srcs/: main.cc
1_sem/1_lab/first_task/libs/: maclaurin.hh
1_sem/1_lab/first_task/srcs/: main.cc
1_sem/1_lab/second_task/bins/: second_task.out
1_sem/1_lab/second_task/libs/: seidel.hh
1_sem/1_lab/second_task/srcs/: main.cc  seidel.cc
1_sem/1_lab/third_task/: CMakeLists.txt
1_sem/2_lab/first_task/: CMakeLists.txt
1_sem/2_lab/first_task/libs/: newton.hh
1_sem/2_lab/second_task/libs/: integral.hh
1_sem/2_lab/second_task/srcs/: main.cc
2_lab/first_task/srcs/: main.cc  newton.cc
2_lab/second_task/: CMakeLists.txt
2_lab/second_task/srcs/: integral.cc
2_sem/1_lab/1_task/: .gitignore  README.md
2_sem/1_lab/1_task/libs/: diff_eq.hh
2_sem/1_lab/1_task/srcs/: main.cc
2_sem/1_lab/2_task/: README.md
2_sem/1_lab/2_task/libs/: diff_eq.hh  runge_kutta.hh
2_sem/1_lab/2_task/srcs/: main.cc
2_sem/1_lab/3_task/libs/: diff_eq.hh
2_sem/1_lab/3_task/srcs/: main.cc
2_sem/1_lab/libs/: diff_eq.hh  tables.hh
2_sem/1_lab/srcs/: 1_task.cc  2_task.cc  3_task.cc
2_sem/2_lab/first_task/: CMakeLists.txt
2_sem/2_lab/first_task/libs/: schemes.hh
2_sem/2_lab/first_task/srcs/: main.cc  schemes.cc
2_sem/2_lab/second_task/: CMakeLists.txt
2_sem/2_lab/second_task/libs/: schemes.hh
2_sem/2_lab/second_task/srcs/: main.cc  schemes.cc
2_sem/coursework/: CMakeLists.txt
2_sem/coursework/libs/: shmemes.hh
2_sem/coursework/srcs/: main.cc  shmemes.cc
